--- a/assembler/index.html
+++ b/assembler/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description"
     content="A client-side application to assemble x86 assembly code for 32 and 64 bit, and disassemble from hex representation using icedx86 and nasm.">
   <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="./example.png">
   <meta name="twitter:title" content="Online x86 Assembler & Disassembler">
   <meta name="twitter:description"
     content="A client-side application to assemble x86 assembly code for 32 and 64 bit, and disassemble from hex representation using icedx86 and nasm.">
