Add Convertor project card to index.html

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                 <p class="project-description">A client-side asm assebler for x86 and x86-64 architectures with a simple web interface.</p>
             </div>
         </a>
+
+        <!-- Convertor Project -->
+        <a href="/convertor" class="project-card">
+            <img src="./convertor/example.png" alt="Convertor" class="project-image">
+            <div class="project-content">
+                <h2 class="project-title">Convertor</h2>
+                <p class="project-description">A simple web app to convert between different units of measurement.</p>
+            </div>
+        </a>
     </div>
 
 </body>
