--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="./assembler/example.png" alt="Assembler & Disassembler" class="project-image">
             <div class="project-content">
                 <h2 class="project-title">Assembler & Disassembler</h2>
-                <p class="project-description">A client-side asm assebler for x86 and x86-64 architectures with a simple web interface.</p>
+                <p class="project-description">A client-side asm assembler for x86 and x86-64 architectures with a simple web interface.</p>
             </div>
         </a>
 
