--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="./convertor/example.png" alt="Convertor" class="project-image">
             <div class="project-content">
                 <h2 class="project-title">Convertor</h2>
-                <p class="project-description">A simple web app to convert between different units of measurement.</p>
+                <p class="project-description">A convertor to transform integers, floats, and strings to bytes and vice versa.</p>
             </div>
         </a>
     </div>
