Rename 'convertor' to 'converter' and update related references in README, manifest, and index.html

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
             </div>
         </a>
 
-        <!-- Convertor Project -->
-        <a href="/convertor" class="project-card">
-            <img src="./convertor/example.png" alt="Convertor" class="project-image">
+        <!-- Converter Project -->
+        <a href="/converter" class="project-card">
+            <img src="./converter/example.png" alt="Converter" class="project-image">
             <div class="project-content">
-                <h2 class="project-title">Convertor</h2>
-                <p class="project-description">A convertor to transform integers, floats, and strings to bytes and vice versa.</p>
+                <h2 class="project-title">Converter</h2>
+                <p class="project-description">A converter to transform integers, floats, and strings to bytes and vice versa.</p>
             </div>
         </a>
     </div>
