--- a/converter/index.html
+++ b/converter/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:description" content="Multi-format converter between hex, integers, floats, and strings.">
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
+    <link rel="icon" type="image/ico" href="./favicon.ico">
     <link rel="manifest" href="./manifest.json">
     <style>
         body {
